# tictactoe

./: CMakeLists.txt  README.md
lib/terminal_ctrl-main/: .gitignore  CMakeLists.txt  README.md
lib/terminal_ctrl-main/include/terminal_ctrl/: terminal_ctrl.hpp
lib/terminal_ctrl-main/tests/: CMakeLists.txt
lib/terminal_ctrl-main/tests/src/: test_cursor.cpp  test_style.cpp
src/: ai.cpp  ai.hpp  main.cpp  player.cpp  player.hpp  utils.cpp  utils.hpp
